crates/elenchus-parser/tests/snapshots/errors__exists_missing_in.snap
---
source: crates/elenchus-parser/tests/errors.rs
assertion_line: 277
expression: "err(\"PREMISE p:\\n    EXISTS h handlers\\n        h does x\\n\")"
---
RESULT: 1 syntax error

EXISTS  (1 problem)
  syntax  : EXISTS <binder> IN <set>  then one condition line using the binder
  example : EXISTS h IN handlers
                h handles request
    line 2, col 13 - EXISTS expects `IN <set>`: EXISTS <binder> IN <set>
      |     EXISTS h handlers
      |             ^^^^^^^^^
